RESOLVED FIXED247687
FrameView::m_pendingTextFragmentIndicatorRange may get reset unexpectedly when the render tree is dirty
https://bugs.webkit.org/show_bug.cgi?id=247687
Summary FrameView::m_pendingTextFragmentIndicatorRange may get reset unexpectedly whe...
alan
Reported 2022-11-09 10:57:27 PST
Attachments
Patch (2.12 KB, patch)
2022-11-09 11:12 PST, alan
no flags
alan
Comment 1 2022-11-09 11:12:04 PST
EWS
Comment 2 2022-11-09 15:49:02 PST
Committed 256506@main (abb17906be3a): <https://commits.webkit.org/256506@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463470 [details].
Note You need to log in before you can comment on or make changes to this bug.